--- a/CrashCourse Informatica/stats_informatica.tex
+++ b/CrashCourse Informatica/stats_informatica.tex
@@ -234,32 +234,32 @@ Por lo general, los economistas nos concentramos en las primeras dos, con un én
 \end{frame}
 
 
-\begin{frame}{Why is answering these questions hard?}
+\begin{frame}{¿Por qué es difícil responder estas preguntas?}
 
 \begin{wideitemize}
 \item
-For descriptive Qs: we only observe data for a \textbf{sample} of individuals, not for the full \textbf{population}
+Para preg. descriptivas: solo observamos una \textbf{muestra} de individuos, no la \textbf{población} completa
 	\begin{itemize}
 		\item 
-		Example: we want to know how the distribution of income in the US has changed. But we only observe income for a survey of workers
+		Ejemplo: queremos saber la proporción de empleo informal pero solo observamos empleo e informalidad de la Encuesta Nacional de Hogares
 	\end{itemize}
 \pause
 
-\item Best case scenario: \\Our sample is \textbf{randomly} selected from the population \\
+\item El mejor escenario: \\Nuestra muestra es \textbf{aleatoriamente} seleccionada de la población \\
 	\begin{itemize}
 		\item 
-		E.g., the workers in our survey were drawn out of hat with names of all possible workers
+		Por ej., los nombres de los trabajadores que vemos en la encuesta fueron sacados de un sombrero al azar donde estaban todos los posibles trabajadores
 		
 		\item
-		If so, need to account for the fact that by chance the sample might have different characteristics from the population
+		Si este es el caso, debemos tomar en cuenta que por simples chances podemos tener una muestra con diferentes características que la población
 	\end{itemize}
 
 
 \pause
-\item Worst case scenario: our sample is \textit{not representative} of the population that we care about
+\item El peor escenario: nuestra muestra es \textit{no representativa} de la población que nos interesa
 	\begin{itemize}
 		\item 
-		E.g., workers with certain characteristics were more likely to respond to the survey
+		Por ej., los trabajadores que son formales tenían muchas mayor probabilidad de responder la encuesta 
 	\end{itemize}
 \end{wideitemize}
 
@@ -268,47 +268,51 @@ For descriptive Qs: we only observe data for a \textbf{sample} of individuals, n
 
 \begin{frame}
 \centering
-\includegraphics[scale=.5]{dewey-defeats-truman}
+\includegraphics[scale=.3]{dewey-defeats-truman}
 \begin{itemize}
 	\item 
-	In 1948, Chicago Tribune writes that Thomas Dewey defeats Harry Truman in the 1948 presidential election, based on survey of voters.
+	En 1948, el Chicago Tribute escribió que Thomas Dewey ganaba a Harry Truman en la elección presidencial, basada en una encuesta a votantes
 	
 	\pause
 	\item
-	But their survey was conducted by phone. In 1948, only rich people had phones: sample $\neq$ population $\rightarrow$ misleading results!
+	Pero su encuesta fue por teléfono. En ese año solo la gente rica tenía teléfonos: \\
+ muestra $\neq$ población $\rightarrow$ ¡resultados engañosos!
 \end{itemize}
 
 \end{frame}
 
 \begin{frame}
-\textit{Selection bias} referes to settings like Dewey-Truman where the sample is not drawn randomly from the population of interest
+\textit{Sesgo de selección} se refiere a contextos como el que mencionamos anteriormente, donde la muestra no es sacada aleatoriamente desde la población de interés
 
-\includegraphics[width = 0.6\linewidth]{selection_bias_xkcd.png}
+\begin{center}
+\includegraphics[width = 0.45\linewidth]{selection_bias_xkcd.png}
+\end{center}
 \end{frame}
 
 
-\begin{frame}{Why is answering these questions hard? (Part II)}
+\begin{frame}{¿Por qué responder estás preguntas es difícil? (Parte II)}
 \begin{wideitemize}
 	\item
-	Answering causal questions is often \textit{even harder} than descriptive ones. Why?
+	Responder preguntas causales es incluso \textit{más difícil} que las descriptivas. ¿Por qué?
 	
 	\pause
 	\item
-	Causal Qs involve both a descriptive component (what are outcomes in reality?) and a \textit{counterfactual} component (how would things have been under a different treatment?)
+	Las preg. causales envuelven tanto un componente descriptivo (¿cómo es el \textit{outcome} en la realidad?) y un componente \textbf{contrafactual} (¿cómo hubieran sido las cosas bajo un tratamiento diferente?)
 	
 	\pause
 	\item
-	Example: what is the causal effect on your earnings of going to Brown instead of URI? 
+	Ejemplo: ¿Cuál es el efecto causal en sus salarios de ir a UdeP en vez de la U. Pacífico?
 		\begin{itemize}
 			\item
-			Descriptive Q: how much do Brown students earn after graduation? 
+			Preg. Descriptiva: ¿Cuánto ganan los alumnos de UdeP después de graduarse?
 			
 			\item
-			Counterfactual Q: how much would Brown students have earned if they went to URI?  
+			Preg. Contrafactual: ¿Cuánto \textit{hubieran} ganado los alumnos de UdeP después de graduarse \textit{si hubieran estudiado en la UP}?
 		\end{itemize}
 		
 	\pause 	
-	\item Counterfactual Qs can't ever be answered with data alone. Need additional assumptions to learn about them!	
+	\item Preg. Contrafactuales no se pueden contestar con data solamente. ¡Necesitamos supuestos para aprender de ellos!
+	
 \end{wideitemize}	
 \end{frame}
 
