--- a/CrashCourse Informatica/stats_informatica.tex
+++ b/CrashCourse Informatica/stats_informatica.tex
@@ -2216,6 +2216,42 @@ Tomando promedios, $\bar{Y} = \alpha + \bar{X} \beta + \bar{\epsilon}$. \pause E
 	
 \end{frame}
 
+%%%%%%%%%%%%%%%%%% Clase Parte II 
+\begin{frame}
+\begin{center}
+{\Huge \textbf{Fin de la parte I}}
+\end{center}
+\end{frame}
+
+\begin{frame}{La clase pasada\dots}
+La clase pasada vimos como podemos aproximar la función de esperanza condicional (en variables que observamos $X_i$) en una forma lineal 
+\begin{align*}
+E[Y_i \mid X_i =x ] \approx \alpha + x \beta ,
+\end{align*}
+cuando $X_i$ es un escalar (es decir, $X_i\in \mathbb{R}$ en lugar de ser un vector en $\mathbb{R}^k$).
+			\begin{itemize}
+					\item 
+					Y mostramos como el estimando ($\alpha$,$\beta$) se puede estimar por OLS
+				\end{itemize}
+
+\vspace{.5cm}
+Esto se puede generalizar al caso donde observas varias características $X_{i1}, X_{i2}, \dots, X_{ik}$. Simplemente podemos escribirlo en forma de vectores. 
+\begin{align*}
+E[Y_i| \mathbf{X}_i =\mathbf{x} ] \approx \mathbf{x}' \bm{\beta} \text{ dado un vector } \mathbf{X_i} = (1,X_{i1},...,X_{iK})'
+\end{align*}
+
+\end{frame}
+
+	
+	\begin{frame}{Plan para hoy}
+
+	1. Introducción a Machine Learning
+	\vspace{0.8cm}
+	
+	2. Comandos de Stata para ML
+	
+	\end{frame}
+	
 	
 \end{document}
 
